<resources>
    <string name="app_name">Real Estate Manager</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="real_estate_s_description">Property\'s description</string>
    <string name="surface">Surface</string>
    <string name="number_of_rooms">Number of rooms</string>
    <string name="number_of_bedrooms">Number of bedrooms</string>
    <string name="number_of_bathrooms">Number of bathrooms</string>
    <string name="location">Location</string>
    <string name="number_of_floors">Number of floors</string>
    <string name="description">Description</string>
    <string name="the_photo_title">the photo title</string>
    <string name="type_of_property">Type of property</string>
    <string name="city">City</string>
    <string name="price">Price</string>
    <string name="rooms_and_bedrooms">%1$d rooms and %2$d bedrooms</string>
    <string name="realestate_photo">Property Photo</string>
    <string name="settings">Settings</string>
    <string name="close_drawer">Close navigation drawer</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="around_me">Around me</string>
    <string name="location_rationale">We need this permissions to locate your position and display all porperties around you.</string>
    <string name="storage_rationale">We need this permissions to access pictures saved in your device and to allow you to take photos with your camera.</string>
    <string name="enter_price">Enter the price</string>
    <string name="enter_the_surface">Enter the surface</string>
    <string name="add_a_real_estate">Add a property</string>
    <string name="enter_the_number_of_rooms">Enter the number of rooms</string>
    <string name="enter_the_number_of_bedrooms">Enter the number of bedrooms</string>
    <string name="enter_the_number_of_bathrooms">Enter the number of bathrooms</string>
    <string name="enter_the_real_estate_description">Enter the property description</string>
    <string name="enter_the_real_estate_address">Enter the property entire address</string>
    <string name="address">Address</string>
    <string name="zipcode">Zipcode</string>
    <string name="enter_the_zipcode">Enter the zipcode</string>
    <string name="country_code">Country code</string>
    <string name="enter_the_city">Enter the city</string>
    <string name="point_of_interest">Point of interest</string>
    <string name="enter_the_nearest_amenities">Enter the nearest amenities</string>
    <string name="sold">Status</string>
    <string name="for_sale_since">For sale since :</string>
    <string name="select_a_date">Select a date</string>
    <string name="sold_since">Sold since</string>
    <string name="year_of_the_construction">Year of the construction</string>
    <string name="real_estate_agent">Real estate agent</string>
    <string name="enter_the_number_of_floors">Enter the number of floors</string>
    <string name="co_ownership">Co ownership</string>
    <string name="add_the_real_estate">Add the property</string>
    <string name="save_the_real_estate">Save the property</string>
    <string name="add_pictures">Add pictures</string>
    <string name="add_movies">Add movies</string>
    <string name="unknown_date">Unknown date</string>
    <string name="enter_the_picture_s_caption">Enter the picture\'s caption</string>
    <string name="save_picture_dialog">Would you save this picture?</string>
    <string name="save_movie_dialog">Would you save this movie?</string>
    <string name="cancel">Cancel</string>
    <string name="camera">From camera</string>
    <string name="memory">From memory</string>
    <string name="save_the_picture">Save the picture</string>
    <string name="a_preview_of_the_chosen_picture">A preview of the chosen picture</string>
    <string name="delete_picture">Delete this picture?</string>
    <string name="delete">Delete</string>
    <string name="would_you_delete_picture">Would you remove this picture to the list of pictures?</string>
    <string name="an_close_icon_to_delete_picture">An close icon to delete picture</string>
    <string name="country">Country</string>
    <string name="edit_the_real_estate">Edit the property</string>
    <string name="update_success">The property update is successful</string>
    <string name="update_failed">The property update failed</string>
    <string name="save_success">The property save is successful</string>
    <string name="save_failed">The property save failed</string>
    <string name="hour_format">%1$d-%2$d-%3$d</string>
    <string name="search_a_real_estate">Search a property</string>
    <string name="area_unit">Unit of area</string>
    <string name="choose_unit_area">Choose your measurement unit of the property\'s area</string>
    <string name="currency">Currency</string>
    <string name="choose_currency">Choose the currency for the property\'s price</string>
    <string name="units_preferences">Measurement units</string>
    <string name="date_format">Date format</string>
    <string name="real_estate_list">Property list</string>
    <string name="apartment">Apartment</string>
    <string name="loft">Loft</string>
    <string name="villa">Villa</string>
    <string name="house">House</string>
    <string name="manor">Manor</string>
    <string name="min_price">Min. price</string>
    <string name="max_price">Max. price</string>
    <string name="min_surface">Min. surface</string>
    <string name="max_surface">Max surface</string>
    <string name="property_details">Property details</string>
    <string name="min_rooms">Min_rooms</string>
    <string name="max_rooms">Max rooms</string>
    <string name="min_bedrooms">Min. bedrooms</string>
    <string name="max_bedrooms">Max. bedrooms</string>
    <string name="min_bathrooms">Min. bathrooms</string>
    <string name="max_bathrooms">Max. bathrooms</string>
    <string name="minimal_floors">Minimal floors</string>
    <string name="at_least_one_photo">1 photo</string>
    <string name="at_least_3_photos">3 photos</string>
    <string name="at_least_5_photos">5 photos</string>
    <string name="no_photo">No photo</string>
    <string name="minimum_number_of_photos">Minimum number of photos</string>
    <string name="amenities">Amenities</string>
    <string name="school">School</string>
    <string name="shops">Shops</string>
    <string name="public_transport">Public transport</string>
    <string name="garden">Garden</string>
    <string name="is_co_ownership">Is co_ownership?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5+</string>
    <string name="surface_sqft">Surface in Sq ft</string>
    <string name="surface_m2">Surface in m²</string>
    <string name="price_dollars">Price in Dollars</string>
    <string name="price_euros">Price in Euros</string>
    <string name="is_sold">Is Sold?</string>
    <string name="check_if_searched_real_estate_are_sold">Check if searched properties are sold</string>
    <string name="adress_details">%1$s %2$s %3$s</string>
    <string name="network_needed">A network access is needed</string>
    <string name="network_to_display_map">The application need a network access to locate your position and to display map</string>
    <string name="go_to_setting">Go to setting</string>
    <string name="enter_surface_sqft">Enter the surface in sq ft</string>
    <string name="enter_surface_m">Enter the surface in m²</string>
    <string name="enter_price_dollars">Enter the price in Dollars</string>
    <string name="enter_price_euros">Enter the price in Euros</string>
    <string name="please_zipcode">Please enter the zipcode</string>
    <string name="please_city">Please enter the city</string>
    <string name="please_address">Please enter the address</string>
    <string name="which_mean_pictures">By which means would you like to add a picture?</string>
    <string name="which_mean_movies">By which means would you like to add a movie?</string>
    <string name="what_you_add">What do you want to add?</string>
    <string name="gallery_or_camera">You can either take a picture from the camera of this device or choose a picture stored on the camera\'s memory</string>
    <string name="gallery_or_camera_movie">You can either take a movie from the camera of this device or choose a movie stored on the camera\'s memory</string>
    <string name="pictures_or_movie">You can either add a pictures or add a movie</string>
    <string name="please_caption">Please enter the picture\'s caption</string>
    <string name="enter_the_movie_caption">Enter the movie caption</string>
    <string name="save_the_movie">Save the movie</string>
    <string name="details_pictures">Details pictures</string>
    <string name="delete_date">Delete Date</string>
    <string name="sorry_no_result">Sorry, there is no results</string>
    <string name="verify_for_geocoder">Please verify your network access to save the coordonates of the property</string>


    <string-array name="typeProperty">
        <item>Apartment</item>
        <item>House</item>
        <item>Loft</item>
        <item>Villa</item>
        <item>Manor</item>
    </string-array>

    <string-array name="countryCode">
        <item>FRANCE</item>
        <item>UNITED STATE</item>
        <item>BELGIUM</item>
        <item>CANADA</item>
        <item>LUXEMBOURG</item>
        <item>GREAT BRITAIN</item>
    </string-array>

    <string-array name="agent">
        <item>Benoit Lefèvre</item>
        <item>Karl Malone</item>
        <item>Kevin Durant</item>
        <item>Lebron James</item>
    </string-array>

    <string-array name="co_ownership">
        <item>True</item>
        <item>False</item>
    </string-array>

    <string-array name="unit_area">
        <item>Square foot</item>
        <item>Square meter</item>
    </string-array>

    <string-array name="area_values">
        <item>sq ft</item>
        <item>m²</item>
    </string-array>

    <string-array name="currency_entries">
        <item>Dollars</item>
        <item>Euros</item>
    </string-array>

    <string-array name="currency_values">
        <item>$</item>
        <item>€</item>
    </string-array>

    <string-array name="date_entries">
        <item>yyyy-mm-dd</item>
        <item>dd-mm-yyyy</item>
    </string-array>

    <string-array name="date_values">
        <item>us</item>
        <item>fr</item>
    </string-array>
</resources>
