<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/addPropertyFragment"
            android:icon="@drawable/ic_add_circle"
            android:title="@string/add_a_real_estate" />

        <item
            android:id="@+id/mapFragment"
            android:icon="@drawable/ic_map"
            android:title="@string/around_me" />

        <item
            android:id="@+id/searchFragment"
            android:icon="@drawable/ic_search"
            android:title="@string/search_a_real_estate" />
    </group>

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />


</menu>