<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.chip.ChipGroup xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/chipGroupAmenities"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    app:singleLine="false">

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_school"
        style="@style/CustomChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/school" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_shop"
        style="@style/CustomChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shops" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_transport"
        style="@style/CustomChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/public_transport" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_garden"
        style="@style/CustomChip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/garden" />
</com.google.android.material.chip.ChipGroup>

