<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/fragment_details_photo_img"
        android:layout_width="@dimen/img_view_details_width"
        android:layout_height="@dimen/img_view_details_height"
        android:layout_marginStart="4dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/the_photo_title"/>

    <TextView
        android:id="@+id/fragment_details_photo_title"
        android:layout_width="0dp"
        android:layout_height="@dimen/title_details_height"
        android:background="@color/colorPictureTitle"
        android:paddingTop="8dp"
        android:text="@string/description"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/fragment_details_photo_img"
        app:layout_constraintEnd_toEndOf="@+id/fragment_details_photo_img"
        app:layout_constraintStart_toStartOf="@+id/fragment_details_photo_img" />

    <ImageView
        android:id="@+id/fragment_details_delete_btn"
        android:layout_width="@dimen/delete_details_width"
        android:layout_height="@dimen/delete_details_height"
        android:background="@android:color/white"
        android:contentDescription="@string/an_close_icon_to_delete_picture"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>